# MS_CS_Project_Feb_2026

./: .gitignore  CMakeLists.txt  CPP_README.md  README.md  build.bat
cpp/: CMakeLists.txt
cpp/include/: add_expense_dialog.h  expense_record.h  expense_repository.h  expense_table_model.h  main_window.h  pie_chart_widget.h  summary_widget.h  user_record.h
cpp/src/: add_expense_dialog.cpp  expense_repository.cpp  expense_table_model.cpp  main.cpp  main_window.cpp  pie_chart_widget.cpp  summary_widget.cpp
docs/: CPP_README.md  ExpenseTracker_Comparison.pptx
python/: README.md  add_edit_dialog.py  add_expense_dialog.py  build_executable.sh  expense_manager.py  main.py  main_window.py  smoke_test.py  table_model.py
shared/data/: expenses.json
shared/resources/: expense_theme.qss
shared/ui/: add_edit_dialog.ui  add_expense_dialog.ui  main_window.ui  summary_panel.ui
